--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,203 +1,24 @@
-$filter-button-color: #e80b6b;
-$reset-button-color: #c2bcab;
-$input-field-border-color: #c1bcac;
-$border-radius: 4px;
-$transition: 0.3s;
-$star-color: #eeba0b;
-
-@mixin border-radius($radius) {
-  border-radius: $radius;
-}
-
-@mixin transition($transition) {
-  transition: $transition;
-}
-
-@mixin button($color) {
-  @include border-radius($border-radius);
-  @include transition($transition);
-  font-weight: 500;
-  cursor: pointer;
-  background-color: $color;
-  height: 43px;
-  color: #fff;
-  font-size: 14px;
-  padding: 0 28px;
-  text-align: center;
-  letter-spacing: 1px;
-  border: none;
-  text-transform: uppercase;
-
-  &:hover {
-    background-color: darken($color, 10);
-  }
-  &:active {
-    background-color: darken($color, 14);
-  }
-}
-
-@mixin input($color) {
-  @include border-radius($border-radius);
-  @include transition($transition);
-  background-color: transparent;
-  border: 2px solid $color;
-  font-size: 16px;
-  padding: 8px;
-
-  &:hover {
-    border-color: darken($color, 20);
-  }
-  &:focus {
-    border-color: darken($color, 40);
-  }
-}
+@import "./colors.scss";
+@import "./mixins.scss";
+@import "./cards.scss";
+@import "./filter.scss";
 
 body {
   font-family: "Rubik", sans-serif;
   margin: 0;
 }
 
-.filter-wrapper {
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-  box-shadow: 2px 4px 8px 0 rgba(46, 61, 73, 0.2);
-  margin-bottom: 46px;
-
-  .filter {
-    display: flex;
-    justify-content: space-between;
-    margin: 25px;
-    width: 900px;
-
-    .price-range {
-      .price-input {
-        @include input($input-field-border-color);
-        width: 60px;
-        margin-right: 10px;
-      }
-    }
-
-    .filter-by-stars {
-      @include input($input-field-border-color);
-      width: 80px;
-    }
-
-    .filter-buttons {
-      .filter-button {
-        @include button($filter-button-color);
-        margin-right: 10px;
-      }
-
-      .reset-button {
-        @include button($reset-button-color);
-      }
-    }
-  }
-}
 .results {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
 
-  .loading {
-    text-align: center;
-    i {
-      font-size: 25px;
-      margin-bottom: 5px;
-      -webkit-animation: rotation 2s infinite linear;
-    }
-
-    @-webkit-keyframes rotation {
-      from {
-        -webkit-transform: rotate(0deg);
-      }
-      to {
-        -webkit-transform: rotate(359deg);
-      }
-    }
-  }
-
-  .card-wrapper {
-    @include border-radius($border-radius);
-    @include transition($transition);
-    margin: 10px;
-    width: 300px;
-    box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
-    border-color: rgba(0, 0, 0, 0.05);
-    cursor: pointer;
-
-    // :hover {
-    //   box-shadow: 2px 4px 8px 0 rgba(46, 61, 73, 0.2);
-    // }
-  }
-
-  .card-image {
-    height: 200px;
-    .image {
-      border-top-left-radius: $border-radius;
-      border-top-right-radius: $border-radius;
-      width: 100%;
-    }
-  }
-
-  .card-body {
-    border-top: 1px solid $input-field-border-color;
-    height: 80px;
-    padding: 8px 12px 16px 12px;
-
-    .first-level-info {
-      font-weight: 500;
-    }
-
-    .second-level-info {
-      display: flex;
-      line-height: 2;
-
-      .stars {
-        font-size: 14px;
-        margin-right: 20px;
-        color: $star-color;
-      }
-
-      .location {
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-        i {
-          margin-right: 6px;
-          color: darken($input-field-border-color, 40);
-        }
-        .country {
-          font-size: 14px;
-          color: darken($input-field-border-color, 40);
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-          width: 200px;
-        }
-      }
-    }
-    .third-level-info {
-      display: flex;
-      margin-top: 16px;
-      justify-content: space-between;
-      align-items: baseline;
-
-      .cost {
-        font-size: larger;
-      }
-
-      .reviews {
-        font-size: 14px;
-        a {
-          color: $filter-button-color;
-          text-decoration: none;
-          i {
-            margin-left: 5px;
-          }
-        }
-      }
-    }
+.loading {
+  text-align: center;
+  i {
+    font-size: $fontSize-larger;
+    margin-bottom: 5px;
+    @include rotation-animation();
   }
 }
