--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,4 +1,5 @@
 @import "./fontSizes.scss";
+@import "./base.scss";
 
 .card-wrapper {
   @include border-radius($border-radius);
@@ -6,7 +7,9 @@
   width: 300px;
   box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
   border-color: rgba(0, 0, 0, 0.05);
-  cursor: pointer;
+  &:hover {
+    box-shadow: 2px 4px 8px 0 rgba(46, 61, 73, 0.2);
+  }
 }
 
 .card-image {
@@ -23,21 +26,17 @@
   height: 80px;
   padding: 8px 12px 16px 12px;
 }
-
 .first-level-info {
   font-weight: 500;
 }
-
 .second-level-info {
   display: flex;
   line-height: 2;
-
   .stars {
     font-size: $fontSize-small;
     margin-right: 20px;
     color: $color-star;
   }
-
   .location {
     display: flex;
     justify-content: center;
@@ -56,24 +55,38 @@
     }
   }
 }
+
 .third-level-info {
   display: flex;
   margin-top: 16px;
   justify-content: space-between;
   align-items: baseline;
-
   .cost {
     font-size: $fontSize-large;
   }
+}
 
-  .reviews {
-    font-size: $fontSize-small;
-    a {
-      color: $color-bg-filter-button;
-      text-decoration: none;
-      i {
-        margin-left: 5px;
-      }
+.reviews {
+  font-size: $fontSize-small;
+  font-weight: 500;
+  a {
+    color: $color-bg-filter-button;
+    text-decoration: none;
+    transition: $transition;
+    i {
+      margin-left: 5px;
     }
+    &:hover {
+      color: darken($color-bg-filter-button, 20);
+      transition: $transition;
+    }
+  }
+}
+
+// Media queries
+
+@media (min-width: 1660px) {
+  .card-wrapper {
+    margin: 16px;
   }
 }
